test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/special-omittable.widl
// Extracted from http://dev.w3.org/2006/webapi/WebIDL/ on 2011-05-06
// omittable is no longer a recognized keyword as of 20110905
interface Dictionary {
  readonly attribute unsigned long propertyCount;

  omittable getter float getProperty(DOMString propertyName);
  omittable setter void setProperty(DOMString propertyName, float propertyValue);
};